--- a/confused_main/pom.xml
+++ b/confused_main/pom.xml
@@ -41,6 +41,18 @@
 			<artifactId>commons-cli</artifactId>
 			<version>1.4</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>ski.puchal</groupId>
+			<artifactId>confused-bill</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>ski.puchal</groupId>
+			<artifactId>confused-work</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
